solve issue with gap between filters, more or less

--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ a:link, a:visited, a:active {
 
     .filters-cards {
         justify-content: flex-start;
-        gap: unset;
+        gap: 30px;
     }
 
     .accommodations-info {
